fix gender gap

--- a/pages/retirement/retirement.module.css
+++ b/pages/retirement/retirement.module.css
@@ -25,7 +25,7 @@
   flex-direction: column;
   gap: 8px;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   margin: auto;
   text-align: center;
 }
@@ -52,7 +52,7 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  padding: 1rem 0;
+  padding: 1rem;
 }
 
 .number {
@@ -65,6 +65,16 @@
 }
 
 .footNote {
-  margin-top: 3rem;
+  margin-top: -1rem;
   font-style: italic;
+  font-size: 70%;
+}
+
+.controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+  padding: 1rem 0;
 }
